testsuite/tests/typecheck/should_fail/ExplicitSpecificity9.stderr

ExplicitSpecificity9.hs:6:1: error:
    Inferred type variables are not allowed
    In a deriving declaration
